--- a/src/blocks/auth/auth.css
+++ b/src/blocks/auth/auth.css
@@ -1,7 +1,7 @@
 .auth {
     padding-block: 60px;
     padding-bottom: 0;
-    max-width: 358px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     width: calc(100% - 400px);
