--- a/src/blocks/auth/auth.css
+++ b/src/blocks/auth/auth.css
@@ -2,6 +2,7 @@
     padding-block: 60px;
     padding-bottom: 0;
     max-width: 100%;
+    height: 100vh;
     margin-left: auto;
     margin-right: auto;
     width: calc(100% - 400px);
