--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -2,6 +2,7 @@
   width: calc(100% - 400px);
   padding-top: 66px;
   padding-bottom: 60px;
+  margin-bottom: 0;
 }
 @media screen and (max-width:1152px) {
   .footer {
